<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VHBPCP-V0</string>
    <string name="action_settings">Settings</string>
    <string name="inviteConnexion">Identifiez-vous</string>
    <string name="inviteSPs">Mes situations professionnelles :</string>
    <string name="loginVisiteur">Login du visiteur</string>
    <string name="boutonValider">Valider</string>
    <string name="boutonAjouter">ajouter</string>
    <string name="boutonRetour">Retour</string>
    <string name="motPasseVisiteur">Votre mot de passe</string>
    <string name="msgErrChampVide">Au moins un champ de saisie n\'est pas renseigné !</string>
    <string name="msgErrConnexionInvalide">Login et/ou mot de passe invalide</string>
    <string name="msgErrRecupSitPros">Erreur de récupération des situations professionnelles</string>
    <string name="msgErrUpdateSitPro">Erreur de mise à jour de la situation professionnelle</string>
    <string name="title_activity_sitpros">Situations professionnelles</string>
    <string name="inviteLibcourt">Libellé court</string>
    <string name="inviteDescriptif">Descriptif</string>
    <string name="buttonUpdate">Modifier</string>
    <string name="inviteLocalisation">Localisation</string>
    <string name="inviteSource">Source</string>
    <string name="textViewProduction">Mes productions :</string>
    <string name="textViewLibelle">Vous saisissez un libellé explicite pour chaque production réalisée dans cette situation et vous indiquez l\'URI permettant d\'y accéder.</string>
    <string name="textViewDesignation">Désignation :</string>
    <string name="textViewURI">Adresse (URI) :</string>
    <string name="textViewDelete">Supprimer :</string>
    <string name="buttonEnregistrer">Enregistrer</string>

</resources>